--- a/src/Components/Todoform/TodoForm.module.css
+++ b/src/Components/Todoform/TodoForm.module.css
@@ -11,9 +11,12 @@ input{
     width:50%;
     height: 30px;
     padding: 10px 15px;
-    border:none;
+     border:2px solid rgb(216, 214, 214);
     border-radius: 5px;
     outline:none;
+}
+input:focus{
+    border: 2px solid #0c4a6e;
 }
 .add{
     display: flex;
